# AITactics_Game

./: CMakeLists.txt
Data/Tilemaps/: Level1.tmx
Data/Tilesets/: Level1_Tileset.tsx
Source/: main.cpp  stdafx.h
Source/Implementation/: GameApp.cpp  GameApp.h
Source/Implementation/Environment/: WorldModule.cpp  WorldModule.h
Source/Interface/: IGameApp.h
Source/Interface/Environment/: IWorldModule.h
Source/Interface/di/: IDependencyInjector.h  IGameAppDI.h
Source/di/: GameAppDI.cpp  GameAppDI.h
